Fixed view height overflow issue

--- a/styles/main/main.module.sass
+++ b/styles/main/main.module.sass
@@ -6,6 +6,6 @@
   width: 100%
   display: flex
   flex-direction: column
-  height: 100vh
-  height: var(--app-height, 100vh)
+  height: calc(100vh - $header-height)
+  height: calc(var(--app-height, 100vh) - $header-height)
   display: relative
